<resources>
    <string name="app_name">Hotel Management System</string>
    <string name="Registration">Registration</string>
    <string name="Login">Login</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="lastname">Last Name:</string>
    <string name="firstname">First Name:</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="address">Address:</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="zip">Zip Code:</string>
    <string name="creditcard">Credit Card Number:</string>
    <string name="cc_expiry">Credit Card Expiry (MM/YY):</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>

    <string name="view_profile">View Profile</string>
    <string name="request_hotel_reservation">request hotel reservation</string>
    <string name="view_reservation_summary">view reservation summary</string>
    <string name="view_pending_reservation">view pending reservation</string>
    <string name="guest_page_title">Hello, Guest!</string>
    <string name="admin_page_title">Hello, Admin!</string>
    <string name="search_for_user">search for user</string>
    <string name="manager_page_title">Hello, Manager!</string>
    <string name="manager_hotel_detail">Hotel Winter Moon, San Antonio </string>

    <string-array name="manager_functions">
        <!--<item>Menu</item>-->
        <item></item>
        <item>My Profile</item>
        <item>View Reservations</item>
        <item>Search for a Room</item>
        <item>Available Rooms</item>
    </string-array>
    <string-array name="admin_functions">
        <!--<item>Menu</item>-->
        <item></item>
        <item>My Profile</item>
        <item>Search for a User</item>
    </string-array>
    <string-array name="guest_functions">
        <!--<item>Menu</item>-->
        <item></item>
        <item>My Profile</item>
        <item>Request Hotel Reservation</item>
        <item>View Reservations Summary</item>
        <item>View Pending Reservations</item>
    </string-array>
</resources>